Fixed margins/overlap for all consuming display.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,9 +1,9 @@
 #allconsuming {
   width: 96%;
-  margin: auto;
+  margin: 0 auto 3em 0;
   text-align: center;
   overflow: hidden;
-  height: 9em;
+  height: 6em;
   font-size: 80%;
   .ac-item {
     width: 8em;
